--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 .App {
+  max-width: 2000px;
+  margin: auto;
   text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Styles for blog posts */
+
+.post {
+  text-align: left;
+  width: 70%;
+  margin: auto;
+  padding-bottom: 6rem;
+}
+.post h2 {
+  text-align: center;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+}
+.post-banner {
+  width: fit-content;
+  margin: auto;
+}
+.post img {
+  object-fit: cover;
+  width: 500px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Responsive design */
+
+@media screen and (max-width: 768px){
+  .post {
+    width: 90%;
+    padding-bottom: 4rem;
+  }
+  .post img {
+    width: 400px;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 450px){
+  .post {
+    width: 95%;
   }
-  to {
-    transform: rotate(360deg);
+  .post h2 {
+    margin-top: 2rem;
+  }
+  .post img {
+    width: 280px;
   }
 }
