--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,10 @@
 }
 
 .App {
-  max-width: 2000px;
+  max-width: 1920px;
   margin: auto;
   text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
 }
